increased content max-width and added styles for carousel
implemented custom directive for carousel content / added carousel js

added carousel content and improved css

Implement initial set of Sphinx directives for layout control, replacing JS

updated confg to include carousel directives

removed duplicated run in directive

replaced roles for directives

improved css for new carousel structure

update carousel JS to support new DOM structure

now carousel is a ext instead of adding each directive manually

now carousel content visibility is handled trough css

fixed js loading

enhanced carousel css

updated carousel ext to enable icon rendering and button redirection support

Repair merge damage done

Autoformat

Fixup

Repair autoformat damage

refactor carousel extension: simplify directives and automate behavior

fixed undefined jquery error

now carousel adds its own js, also added support for links & arrow icon

removed unnecessary js logic & added carousel js

now carousel uses nuitka color palette, also added most of functionality using css

updated max-w

removed carousel tabs wrap to fit better

added format ext for css and js

auto-format

added missing comma

now prettier also works for js

Manual autoformat

Autoformat with biome

Use js_order to order things instead of doing it dynamically

Fix, otherwise this should break other builds as they also need to find carousel

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,7 +56,8 @@
 				"redhat.vscode-xml",
 				"eamodio.gitlens",
 				"swyddfa.esbonio",
-				"google.geminicodeassist"
+				"google.geminicodeassist",
+				"esbenp.prettier-vscode"
 			]
 		}
 	},
