--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,9 @@
 		"ghcr.io/devcontainers-extra/features/bash-command:1": {
 			"command": "python3 -m pip install --break invoke pipenv"
 		},
+		 "ghcr.io/devcontainers/features/node:1": {
+   "version": "18"
+  },
 		"ghcr.io/hwaien/devcontainer-features/match-host-time-zone": {}
 	},
 
@@ -30,7 +33,8 @@
 	"postCreateCommand": {
 		"set_timezone": "sudo dpkg-reconfigure tzdata -f none",
 		"create_supervisor_log_dir": "sudo mkdir -p ${containerWorkspaceFolder}/.devcontainer/supervisor/logs",
-		"chown_supervisor_log_dir": "sudo chown -R vscode:vscode ${containerWorkspaceFolder}/.devcontainer/supervisor"
+		"chown_supervisor_log_dir": "sudo chown -R vscode:vscode ${containerWorkspaceFolder}/.devcontainer/supervisor",
+		"npm_install": "npm install"
 	},
 
 
@@ -57,14 +61,12 @@
 				"eamodio.gitlens",
 				"swyddfa.esbonio",
 				"google.geminicodeassist",
-				"esbenp.prettier-vscode"
+				"esbenp.prettier-vscode",
+				"csstools.postcss"
 			]
 		}
 	},
 	"containerEnv": {
 		"PIPENV_VERBOSITY": "-1"
 	}
-}
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
 }
