--- a/.devcontainer/supervisor/supervisord.conf
+++ b/.devcontainer/supervisor/supervisord.conf
@@ -5,8 +5,8 @@ pidfile=%(here)s/supervisord.pid                        ; Main supervisord pidfi
 childlogdir=%(here)s/logs                               ; Directory for child process logs
 
 [program:auto-update]
-command=/bin/bash /workspaces/Nuitka-website/auto-update.sh ; Command to run your script
-directory=/workspaces/Nuitka-website                    ; Working directory for your script
+command=/bin/bash %(ENV_containerWorkspaceFolder)s/auto-update.sh ; Command to run your script
+directory=%(ENV_containerWorkspaceFolder)s                    ; Working directory for your script
 user=vscode                                             ; User to run the script as (default dev container user)
 autostart=true                                          ; Start this program automatically when supervisord starts
 autorestart=true                                        ; Restart the program automatically if it exits unexpectedly
@@ -14,6 +14,6 @@ stopsignal=QUIT                                         ; Signal to send to stop
 stopwaitsecs=10                                         ; Wait up to 10 seconds for graceful shutdown before killing
 redirect_stderr=true                                    ; Redirect stderr to stdout
 
-stdout_logfile=/workspaces/Nuitka-website/auto-update.log   ; Where to redirect stdout (and stderr)
+stdout_logfile=%(ENV_containerWorkspaceFolder)s/auto-update.log   ; Where to redirect stdout (and stderr)
 stdout_logfile_maxbytes=50MB                            ; Max size of stdout log before rotation
 stdout_logfile_backups=3                                ; Number of stdout log backups
