--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,7 +95,7 @@
     ],
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
-    "editor.wordWrap": "bounded",
+    "editor.wordWrap": "off",
     "githubPullRequests.ignoredPullRequestBranches": [
         "main"
     ],
