--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
         {
             "label": "View Auto-Update Log",
             "type": "shell",
-            "command": "tail -F ${workspaceFolder}/auto-update.log",
+            "command": "tail -F ${workspaceFolder}/auto-update.log || true",
             "problemMatcher": [],
             "isBackground": true,
             "presentation": {
