--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,6 @@ lxml = "*"
 sphinx-copybutton = "==0.5.2"
 sphinx-design = "==0.5.0"
 sphinx-inline-tabs = "==2023.4.21"
-sphinx-rtd-theme = "==2.0.0"
 "sphinxcontrib.twitter" = "==0.5.0"
 ablog = "==0.11.6"
 sphinxcontrib-youtube = "==1.4.1"
@@ -45,6 +44,7 @@ sphinx-intl = "==2.1.0"
 psutil = "*"
 setproctitle = "*"
 livereload = "*"
+sphinx-rtd-theme = "3.0.2"
 
 [requires]
 python_version = "3.12"
