--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,4 +33,5 @@
     "[html]": {
         "editor.defaultFormatter": "vscode.html-language-features"
     },
+    "esbonio.server.installBehavior": "nothing",
 }
