--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "postcss input.css -o output.css --config postcss.config.js"
+    "build:css": "postcss $INPUT --output $OUTPUT --config postcss.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.7",
+    "html-minifier": "^4.0.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1"
-  },
-  "devDependencies": {}
+  }
 }
