Update Node version, replace HTML minifier with maintained version, fix cache, and improve build:html command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss $INPUT --output $OUTPUT --config postcss.config.js",
-    "build:html": "html-minifier --collapse-whitespace --remove-optional-tags --remove-redundant-attributes \"$INPUT\" -o \"$INPUT\""
+    "build:html": "sh -c 'html-minifier-next --collapse-whitespace --remove-optional-tags --remove-redundant-attributes \"$INPUT\" -o \"$INPUT.min.html\" && mv \"$INPUT.min.html\" \"$INPUT\"'"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.7",
-    "html-minifier": "^4.0.0",
+    "html-minifier-next": "^1.1.5",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1"
   }
