now devcontainer check is more reliable, improved postcss error handling

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -67,6 +67,7 @@
         }
     },
     "containerEnv": {
-        "PIPENV_VERBOSITY": "-1"
+        "PIPENV_VERBOSITY": "-1",
+        "IN_DEVCONTAINER": "1"
     }
 }
