added flags for env mode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -68,6 +68,6 @@
     },
     "containerEnv": {
         "PIPENV_VERBOSITY": "-1",
-        "IN_DEVCONTAINER": "1"
+        "DEVELOPMENT_MODE": "1"
     }
 }
