--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,8 @@
     },
     "[xml]": {
         "editor.defaultFormatter": "redhat.vscode-xml"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
     }
 }
