--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "html-minifier-next": "^1.1.5",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2"
   }
 }
