--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "presentation": {
-        "panel": "shared",
+        "panel": "shared"
     },
     "tasks": [
         {
@@ -25,6 +25,19 @@
             }
         },
         {
+            "label": "stop auto-update.sh",
+            "type": "shell",
+            "command": "pkill -f auto-update.sh || true",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "never"
+            },
+            "detail": "Stop any running auto-update.sh processes"
+        },
+        {
             "label": "rebuild all pages",
             "type": "shell",
             "command": "killall -SIGUSR2 sphinx-autobuild",
@@ -35,6 +48,26 @@
             "presentation": {
                 "reveal": "never"
             }
+        },
+        {
+            "label": "run development mode",
+            "type": "shell",
+            "command": "./auto-update.sh --development",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [],
+            "dependsOn": ["stop auto-update.sh"]
+        },
+        {
+            "label": "run production mode",
+            "type": "shell",
+            "command": "./auto-update.sh --production",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [],
+            "dependsOn": ["stop auto-update.sh"]
         },
         {
             "label": "auto-format current file",
@@ -48,7 +81,7 @@
         {
             "label": "auto-format documents and code",
             "type": "shell",
-            "command": "./auto-format *.py site/*.rst site/*/*.rst site/*.inc site/*/*.inc",
+            "command": "./auto-format *.py site/*.rst site/*/*.rst site/*.inc site/*/*.inc *.json .devcontainer/*.json .vscode/*.json",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
