Added pytest-playwright for regression testing

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ asciinema-automation = "*"
 ordered-set = "*"
 zstandard = "*"
 esbonio = "*"
+pytest-playwright = "*"
 
 [packages]
 restructuredtext-lint = "*"
