--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ asciinema-automation = "*"
 ordered-set = "*"
 zstandard = "*"
 esbonio = "*"
+pytest-playwright = "*"
 
 [packages]
 restructuredtext-lint = "*"
@@ -45,6 +46,7 @@ psutil = "*"
 setproctitle = "*"
 livereload = "*"
 sphinx-rtd-theme = "3.0.2"
+pillow = "*"
 
 [requires]
 python_version = "3.12"
