--- a/.github/workflows/update-golden-images.yml
+++ b/.github/workflows/update-golden-images.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Install Pipenv
         if: steps.check-combination.outputs.skip != 'true'
         run: |
+          npm install
           pip install pipenv
           pipenv install --dev
 
@@ -75,7 +76,18 @@ jobs:
         if: steps.check-combination.outputs.skip != 'true'
         run: |
           pipenv run playwright install --with-deps ${{ matrix.browser }}
+      - name: Start app for screenshots
+        run: |
+          # Dev mode just to block html minifier
+          export DEVELOPMENT_MODE=1
 
+          pipenv run invoke update-docs
+          pipenv run invoke site
+          pipenv run invoke post-process
+
+          nohup pipenv run invoke serve &
+
+          sleep 5
       - name: Generate golden images
         if: steps.check-combination.outputs.skip != 'true'
         run: |
@@ -88,13 +100,13 @@ jobs:
           pipenv run python update.py $ARGS
 
           echo "Golden images generated for ${{ matrix.browser }}/${{ matrix.device }}"
-          ls -lah golden/
+          ls -lah tests/golden/
 
       - name: Save golden images to cache
         if: steps.check-combination.outputs.skip != 'true'
         uses: actions/cache/save@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
         with:
-          path: golden/
+          path: tests/golden/
           key: golden-images-${{ matrix.browser }}-${{ matrix.device }}-${{ hashFiles('src/**', 'update.py') }}
 
       - name: Upload golden images as backup artifact
@@ -102,7 +114,7 @@ jobs:
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
         with:
           name: golden-backup-${{ matrix.browser }}-${{ matrix.device }}-${{ github.run_number }}
-          path: golden/
+          path: tests/golden/
           retention-days: 90
 
   summary:
